Finished functionality of CSV converter.

--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,5 @@
 <div class="lines">
-    <textarea id="grade" cols="100" rows="2">Enter Grade Here...</textarea>
+    <textarea id="grade" cols="100" rows="2" style="background-color: bisque; resize: none">Enter Grade Here...</textarea>
     <br />
-    <textarea id="text" cols="100" rows="20">Paste Your Document's Text Here...</textarea>
+    <textarea id="text" cols="100" rows="20" style="background-color: bisque; resize: none">Paste Your Document's Text Here...</textarea>
 </div>
