--- a/views/partials/directions.html
+++ b/views/partials/directions.html
@@ -2,7 +2,7 @@
 <h3>INSTRUCTIONS: </h3>
 <p>Enter the data for each graded document and click "Next Grade". After all your documents have been submitted, click "Convert to CSV".</p>
 <form>
-    <label>Documents Submitted: </label>
-    <label id="DocNum">0</label>
+    <label style="font-size: 17px; font-family: 'courier'">Documents Submitted: </label>
+    <label id="DocNum" style="font-size: 20px; font-family: 'courier'">0</label>
 </form>
 <br />
