Fixed a bug with the start over button.

--- a/views/partials/jqwerty.html
+++ b/views/partials/jqwerty.html
@@ -60,7 +60,7 @@
         $("#reset").click(function(){
             $("#grade").val("Enter Grade Here...");
             $("#text").val("Paste Your Document's Text Here...");
-            $("#csvtext").val("numeric_score, text ");
+            $("#csvtext").val("numeric_score, textMg9Nfp");
             docs = 0;
             $("#DocNum").text(docs);
             $(".docBox").slideUp();
