--- a/views/partials/directions.html
+++ b/views/partials/directions.html
@@ -1,3 +1,6 @@
+
+<div class="navbar navbar-inverse navbar-fixed-top"></div>
+
 <br />
 <h3>INSTRUCTIONS: </h3>
 <p>Enter the data for each graded document and click "Next Grade". After all your documents have been submitted, click "Convert to CSV".</p>
