Fixed a bug with the new line in the results page.

--- a/views/partials/hiddentext.html
+++ b/views/partials/hiddentext.html
@@ -1,1 +1,1 @@
-<input type="text" id="csvtext" name="csvtext" style="display: none" value="numeric_score, text\r\n" />
+<input type="text" id="csvtext" width="0px" height="0px" name="csvtext" style="display: none" value="numeric_score, textMg9Nfp" />
